changed app name in app.json

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "PAU Software project: traffic prediction app",
+    "name": "Traffico",
     "slug": "traffic-predict",
     "version": "1.0.0",
     "orientation": "portrait",
