--- a/app.json
+++ b/app.json
@@ -2,22 +2,18 @@
   "expo": {
     "name": "Traffico",
     "slug": "traffic-predict",
-    "version": "1.0.0",
+    "version": "0.5.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/traffico-icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.omairsalman.trafficpredict"
+      "bundleIdentifier": "com.omairsalman.traffico"
     },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
-      "package": "com.omairsalman.trafficpredict"
+      "package": "com.omairsalman.traffico"
     },
     "web": {
       "bundler": "metro",
@@ -29,7 +25,7 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": "./assets/images/traffico-icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
@@ -38,11 +34,14 @@
       [
         "@rnmapbox/maps",
         {
-          "RNMapboxMapsImpl": "mapbox", // for Android
+          "RNMapboxMapsImpl": "mapbox",
           "usesAndroidX": true,
-          "android_permissions": ["ACCESS_FINE_LOCATION"]
+          "android_permissions": [
+            "ACCESS_FINE_LOCATION"
+          ]
         }
-      ]
+      ],
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true
